// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Logout /> rendering should render correctly 1`] = `
<React.Fragment>
  <div
    className="container content"
    id="logout"
  >
    <div
      className="inner"
    >
      <div
        className="main-column w-100"
      >
        <div
          className="inner"
        >
          <h2>
            Logout successful
          </h2>
          <div
            className="links row"
          >
            <Link
              className="button partial"
              onClick={[Function]}
              to="/default/status"
            >
              Log in again
            </Link>
          </div>
        </div>
      </div>
    </div>
  </div>
</React.Fragment>
`;

exports[`<Logout /> rendering with placeholder translation tags should render translation placeholder correctly 1`] = `
<React.Fragment>
  <div
    className="container content"
    id="logout"
  >
    <div
      className="inner"
    >
      <div
        className="main-column w-100"
      >
        <div
          className="inner"
        >
          <h2>
            LOGOUT_CONTENT
          </h2>
          <div
            className="links row"
          >
            <Link
              className="button partial"
              onClick={[Function]}
              to="/default/status"
            >
              LOGIN AGAIN
            </Link>
          </div>
        </div>
      </div>
    </div>
  </div>
</React.Fragment>
`;
